# ptp

./: .gitignore  README.md  pyproject.toml
configs/: pregenerate.yaml  pregenerate_prompt_scheme.yaml  train_base.yaml  train_full_chat.yaml  train_prompt_distill.yaml  train_text.yaml
paper-checkpoints/scaling-code-contests-1.1B/: data  train.yaml
paper-checkpoints/scaling-code-contests-268M/: train.yaml
paper-checkpoints/scaling-code-contests-34M/: train.yaml  validate.yaml
paper-checkpoints/scaling-code-contests-4.2M/: train.yaml
paper-checkpoints/scaling-code-contests-525k/: train.yaml
paper-checkpoints/scaling-code-contests-66k/: train.yaml
paper-checkpoints/tinyllama-code-contests-lora-r256/: pregenerate.yaml  train.yaml
paper-checkpoints/vicuna-7b-sharegpt-lora-r128/: pregenerate.yaml  train.yaml
src/ptp/: attention.py  auxiliary_embed.py  lit.py  patch_norms.py  scaling.py  training.py  transformer.py  utils.py
src/ptp/atomic_fs/: __init__.py
src/ptp/cli/: __init__.py  distill.py  generate.py  pregenerate.py  train.py
src/ptp/data/: __init__.py  chat.py  collate.py  load.py  packing.py  pregenerate.py  prompt_scheme.py  sampler.py  text.py  utils.py  (+1 more)
tests/: conftest.py  test_attention_mask_packing.py  test_cli.py  test_data_format.py  test_flex_attention_mask.py  test_flex_attention_mask_multi_doc.py  test_flex_decoding.py  test_generate.py  test_generate_teacher_sampling.py  test_inference_attention.py  test_nested_batch_helpers.py  test_pregenerate_prompt_scheme.py  test_scaling.py  test_trailing_eos.py  test_u_embedding.py
