[project]
name = "ptp"
version = "1.0.0"
description = "Parallel Token Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ml-collections",
    "transformers",
    "numpy",
    "torch",
    "datasets",
    "matplotlib",
    "lightning",
    "wandb",
    "omegaconf",
    "pyyaml",
    "peft",
]

[project.scripts]
ptp_distill = "ptp.cli.distill:main"
ptp_pregenerate = "ptp.cli.pregenerate:main"
ptp_train = "ptp.cli.train:main"
ptp_generate = "ptp.cli.generate:_parse_args"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
